--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="/vite.svg" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
-  <title>the f2e 2022 parallax</title>
+  <title>The F2E 前端 &amp; UI 修煉精神時光屋</title>
 </head>
 
 <body>
