--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon"
-        type="image/svg+xml"
-        href="/vite.svg" />
+        type="image/x-icon"
+        href="/favicon.ico" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
   <title>The F2E 前端 &amp; UI 修煉精神時光屋</title>
